# vex

./: README.md  meson.build
src/: common.c  common.h  main.c  mode_insert.c  mode_insert.h  mode_normal.c  mode_normal.h  ui.c  vex.c  vex.h
